--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
 						<applicationName>${deployment.name}</applicationName>
 						<!-- Authentication to do the deployment -->
 						<username>${username}</username>
-						<password>${password}</password}
+						<password>${password}</password>
 						<properties>
 							<message>${message}</message>
 							<anypoint.platform.config.analytics.agent.enabled>true</anypoint.platform.config.analytics.agent.enabled>
